# isbe-identity-credentials-issuer

./: .env.example  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  Dockerfilev2  ISBE-ART-00103.md  LICENSE  Notas_desarrollo.md  README.md  app.json  dangerfile.js  docker-compose.yml  entrypoint.sh  heroku.yml  manage.py  pyproject.toml  requirements.txt  send_test_email.py
.github/workflows/: 01-build-and-push.yaml  02-deploy.yml  02-eks-aws-deploy.yml  03-merge-to-main-and-tag.yml  CI.yml
.helm/: Chart.yaml  values.yaml
.helm/templates/: _helpers.tpl  deployment.yaml  grafana-dashboard.yaml  ingress.yaml  prometheus-servicemonitor.yaml  secrets.yaml  service.yaml
common/: __init__.py  auth.py  identfy_conector.py  identfy_connector.py  keycloak.py  managenent_api.py  tmf_api.py
docs/: manual.md
issuance/: admin.py  apps.py  emails.py  enum.py  helper.py  models.py  serializers.py  tests.py  urls.py  views.py
issuance/migrations/: 0001_initial.py  0002_issuedcredential_credential_type_and_more.py
ops/prometheus/: prometheus.yml
project/: __init__.py  asgi.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
project/logging/: conf.py  middleware.py
project/services/: ipfs_service.py  jwt_service.py  s3_service.py  tokenization_service.py
styles/css/: issuer.css  izertis.css
tasks/: apps.py  launch_tasks.py
tasks_protocol/: admin.py  apps.py  service.py
templates/email/: welcome_user.html  (+1 more)
templatetags/: custom_extras.py
tests/: test_request_id_logging.py
user/: admin.py  apps.py  forms.py  serializers.py  signals.py  views.py
(+12 files in other folders)
