[project]
    name = "identfy-third-party"
    version = "0.0.0"
    requires-python = ">=3.12"
    dependencies = [
    "Django>=5.0",
    "psycopg[binary]>=3.2",
    ]
[tool.black]
    line-length = 100
    include = '\.pyi?$'
    exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
    )/
    '''

[tool.uv.workspace]
    members = ["."]

[tool.pytest.ini_options]
    DJANGO_SETTINGS_MODULE = "project.settings"
    python_files = ["tests.py", "test_*.py", "*_tests.py"]